# DSSystemsLabs

./: .replit  pyproject.toml
FinalProject_DataIngestion/: README.md  \Users\niki\Documents\Github\FinalProject_DataIngestion\api_data.db  api_data.db  cron_scheduled_api_call.py  data_analysis.py  data_analysis.py.ipynb  data_test.py  data_test2.py  schedule_api_call.py
FinalProject_DataIngestion/.ipynb_checkpoints/: data_analysis.py-checkpoint.ipynb
FinalProject_DiscordBot/: README.md  bot.py
Lab1/: saxena.nikita.SQL.Lab.1.sql  saxena.nikita.lab1.sql
Lab1_SQL/: saxena.nikita.SQL.Lab.1.sql
Lab2/: ns5ubLab2_SQLLite.docx  orders.db  sqliteintro.py
Lab2_SQLite/: Lab2.sqlite  ns5ubLab2_SQLLite.docx  sqliteintro.py
Lab3_ETL_OLAP/: ETL_LAB_AND_OLAP (1).docx  lab3.sql  lab3_dimensional_report.sql  lab3_dimensional_schema.sql  lab3_populating.sql
Lab4_API/: README.md  api_yf_lab4.py
Lab5_HandsOnMongoDB/: FullTerminalOutput  README.md
Lab5_MongoDB/.ipynb_checkpoints/: mongodb_lab_ns5ub-checkpoint.ipynb
Project1_ETLPipeline/: Division_Enrollment_Flat.csv  Division_Enrollment_Flat.json  README.md  Virginia_Division_Enrollment_AllYears.csv  etl_pipeline_education.py
